2016-11-04  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onLocalTest): move to MainMenu.cpp.

2016-11-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameState.cpp (onExit): peacefully shutdown GameEngine.
	* src/client/GameEngine.cpp (onExit): replace with a public
	shutdown() function.

	* src/client/GameState.cpp (addEvent): find a one-liner to
	subscribe to CEGUI event.

	* src/client/GameState.hpp (loadLayout): simpler way to load a CEGUI
	layout file.
	* src/client/GameState.hpp: add mRoot member.

2016-11-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (enter): create the menu.layout.

	* src/client/MainMenu.cpp: create new class.

	* src/client/StateManager.cpp (StateManager): GameEngine pointer comes
	from here.
	* src/client/GameState.hpp (exit): now takes a GameEngine pointer
	parameter.
	* src/client/GameState.hpp (enter): now takes a GameEngine pointer
	parameter.
	* src/client/StateManager_Test.cpp: implement some unit tests.

2016-10-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameState_Test.cpp: useless GameState unit tests.
	* src/client/StateManager.cpp: new StateManager class.
	* src/client/GameState.cpp: new GameState class.

	* src/services/Services.hpp (main): fix the unit tests issue

	* src/client/GameEngine.cpp (overlayHandler): implement a one second
	update for stats overlay.
	* src/client/GameEngine.hpp (GameEngine): add a FPS geometry buffer.

2016-10-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onOptions): fix the wrong NULL test issue.

	* src/client/NyiDialog.cpp (NyiDialog): handle the uniqueName parameter
	and a new parent window to allow multiple dialogs in the same context
	* src/client/NyiDialog.cpp (NyiDialog): add the uniqueName member.

	* src/client/GameEngine.cpp (onLocalTest): add a second NyiDialog
	instance for a test.

2016-10-29  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (onNetworkPlay): now uses the new