@@ -95,6 +95,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-11-04 ven. 01:55]--[2016-11-04 ven. 02:24] =>  0:29
      CLOCK: [2016-11-04 ven. 01:03]--[2016-11-04 ven. 01:54] =>  0:51
      CLOCK: [2016-11-03 jeu. 01:28]--[2016-11-03 jeu. 01:42] =>  0:14
      CLOCK: [2016-11-03 jeu. 00:28]--[2016-11-03 jeu. 01:26] =>  0:58
@@ -235,7 +236,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [-] Now, we have to handle events a better way	
 	- [X] Handle onExit
 	- [X] Shows NyiDialog on onLocalTest  
-	- [ ] Shows NyiDialog on onNetworkPlay  
+	- [X] Shows NyiDialog on onNetworkPlay  
+	- [ ] Same NyiDialog work on onOptions
       - [ ] Find a better way to handle GeometryBuffer object	
       We need a GameState::draw() callback at least for geometrybuffers
       or a list of buffers in GameEngine (or a superclass) with a draw
