@@ -45,10 +45,12 @@ public:
 protected:
   bool onExit(const CEGUI::EventArgs&);
   bool onLocalTest(const CEGUI::EventArgs&);
+  bool onNetworkPlay(const CEGUI::EventArgs&);
   
 private:
   GameEngine* mGameEngine; // Keep a pointer to be able to shutdown
   NyiDialog* mNyiLocalTest;
+  NyiDialog* mNyiNetworkPlay;
 };
 
 #endif //!_MAIN_MENU_HPP_
