@@ -1,5 +1,7 @@
 2016-11-04  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/MainMenu.cpp (onNetworkPlay): use a NyiDialog.
+
 	* src/client/GameEngine.cpp (onLocalTest): move to MainMenu.cpp.
 
 2016-11-02  Jérôme Pasquier  <rainbru@free.fr>
